--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -16,14 +16,19 @@
                 <div class="imagenes">
                     <figure class="cont-imagen">
                         <img src="./build/img/contenido/Pag03/lavadora.svg" alt="lavadora">
-                    </figure> 
+                    </figure>
                 </div>
-                <p>Son los actos/operaciones que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan como el fruto de actividades legales y circulen sin problema en el sistema financiero.</p>  
-            </div> 
+                <p>Son los actos y operaciones que consisten en hacer que los fondos obtenidos a través de las comisión
+                    de delitos, aparezcan como el fruto de actividades legales y circulen sin problema en el sistema
+                    financiero.</p>
+            </div>
         </div>
         <div id="tarjeta02" class="tarjetas03">
             <p>
-                El Lavado de Dinero es el proceso a través del cual es encubierto el origen de los fondos generados mediante el ejercicio de algunas actividades ilegales o criminales (tráfico de drogas, estupefacientes, contrabando de armas, corrupción, fraude, prostitución, extorsión, piratería) y que circulen en el sistema financiero. Es el proceso de hacer que el dinero sucio parezca limpio.
+                El Lavado de Dinero es el proceso a través del cual es encubierto el origen de los fondos generados
+                mediante el ejercicio de algunas actividades ilegales o criminales (tráfico de drogas, estupefacientes,
+                contrabando de armas, corrupción, fraude, prostitución, extorsión, piratería) y que circulen en el
+                sistema financiero. Es el proceso de hacer que el dinero sucio parezca limpio.
             </p>
             <div class="imagenes">
                 <figure class="cont-imagen">
@@ -33,14 +38,16 @@
         </div>
         <div id="tarjeta03" class="tarjetas03">
             <h4 id="h4_2">Financiamiento al terrorismo</h4>
-            
+
             <div class="cont-tarjeta">
                 <div class="imagenes">
                     <figure class="cont-imagen">
                         <img src="./build/img/contenido/Pag03/terrorista.svg" alt="terroristas">
                     </figure>
                 </div>
-                <p>Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los gobiernos generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad física o libertad, valiéndose de instrumentos capaces de causar estragos.</p>
+                <p>Proceso para obtener los bienes y recursos de procedencia lícita o ilícita, para presionar a los
+                    gobiernos generando terror y temor en la población a través de actos que ponen en peligro la vida,
+                    la integridad física o libertad, valiéndose de instrumentos capaces de causar estragos.</p>
             </div>
         </div>
     </div>
