--- a/contenido/pag04.html
+++ b/contenido/pag04.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 04</title>
 </head>
+
 <body>
     <div id="cont-pagina04">
         <div id="cont-instrucciones">
@@ -15,7 +17,8 @@
                 </figure>
                 <div id="globo">
                     <p>
-                        Vamos a conocer tus obligaciones y posibilidades de actuación frente a una sospecha de ilícito en tu día a día; así como tu compromiso ético para evitar vincularte con dichos actos ilícitos.  
+                        Vamos a conocer tus obligaciones y posibilidades de actuación frente a una sospecha de ilícito
+                        en tu día a día; así como tu compromiso ético para evitar vincularte con dichos actos ilícitos.
                     </p>
                 </div>
             </div>
@@ -28,7 +31,7 @@
         </div>
 
         <div id="cont-info">
-            
+
 
             <figure id="circulo-central">
                 <img src="./build/img/contenido/Pag04/CirculoAzul.svg" alt="Circulo">
@@ -37,103 +40,107 @@
             <div id="contenedor-info04">
                 <div id="position-relative">
                     <!-- <div id="enlaces04"> -->
-                        <a class="btn-float" id="btn-1" href="#circulo1">1. Identificación del Cliente</a>
-                        <a class="btn-float" id="btn-2" href="#circulo2">2. Conocimiento del Cliente</a>
-                        <a class="btn-float" id="btn-3" href="#circulo3">3. Metodología de Evaluación de Riesgos PLD/CFT</a>
-                        <a class="btn-float" id="btn-4" href="#circulo4">4. Reporte de Operaciones</a>
-                        <a class="btn-float" id="btn-5" href="#circulo5">5. Estructuras Internas</a>
-                        <a class="btn-float" id="btn-6" href="#circulo6">6. Capacitación y Difusión</a>
-                        <a class="btn-float" id="btn-7" href="#circulo7">7. Sistemas automatizados</a>
-                        <a class="btn-float" id="btn-8" href="#circulo8">8. Reserva y Confidencialidad</a>
-                        <a class="btn-float" id="btn-9" href="#circulo9">9. Lista de Personas Bloquedas</a>
+                    <a class="btn-float" id="btn-1" href="#circulo1">1. Identificación del Cliente</a>
+                    <a class="btn-float" id="btn-2" href="#circulo2">2. Conocimiento del Cliente</a>
+                    <a class="btn-float" id="btn-3" href="#circulo3">3. Metodología de Evaluación de Riesgos PLD/CFT</a>
+                    <a class="btn-float" id="btn-4" href="#circulo4">4. Reporte de Operaciones</a>
+                    <a class="btn-float" id="btn-5" href="#circulo5">5. Estructuras Internas</a>
+                    <a class="btn-float" id="btn-6" href="#circulo6">6. Capacitación y Difusión</a>
+                    <a class="btn-float" id="btn-7" href="#circulo7">7. Sistemas automatizados</a>
+                    <a class="btn-float" id="btn-8" href="#circulo8">8. Reserva y Confidencialidad</a>
+                    <a class="btn-float" id="btn-9" href="#circulo9">9. Lista de Personas Bloquedas</a>
                     <!-- </div> -->
 
                     <!-- <div id="contenedores"> -->
 
-                        <div class="circulos-info circulo-activo" id="info-inicio">
-                            <p>Principales obligaciones para la Prevención del Lavado de Dinero y Financiamiento al Terrorismo
-                            </p>
-                        </div>
+                    <div class="circulos-info circulo-activo" id="info-inicio">
+                        <p>Principales obligaciones para la Prevención del Lavado de Dinero y Financiamiento al
+                            Terrorismo
+                        </p>
+                    </div>
 
-                        <div class="circulos-info" id="circulo1">
-                            <h3>1. Identificación del Cliente</h3>
-                            <p>
-                                El objetivo de esta política es prevenir la relación con clientes que obtengan sus recursos de actividades ilícitas; al verificar su identidad, se pueden mitigar los riesgos operacionales, legales o reputacionales a los que pudiera estar expuesta la Compañía. También ayuda a prevenir usurpaciones de identidad.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo2">
-                            <h3>2. Conocimiento del Cliente</h3>
-                            <p>
-                                El pilar de prevención nos permite contrastar de manera real los datos y documentos del cliente contra la transaccionalidad declarada e histórica, asimismo de dejar constancia de la entrevista es el Formato de Identificación del Cliente con prima anual mayor a 7,500, para el caso de General de Seguros y General de Salud. Para el caso de Reaseguradora Patria es el Formato de Identificación de la Cedente.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo3">
-                            <h3>3. Metodología de Evaluación de Riesgos PLD/CFT</h3>
-                            <p>
-                                Esta Metodología nos permite entender cómo y hasta qué punto es vulnerable la Compañía a los riesgos en materia de LD/FT, lo que nos permite asignar adecuadamente nuestros recursos y aplicar procesos de gestión de riesgos efectivos a las características de esos riesgos.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo4">
-                            <h3>4. Reporte de Operaciones</h3>
-                            <p>
-                                Se refiere a detectar, identificar y reportar cualquier operación en efectivo o  sospechosa al Oficial de Cumplimiento y éste a su vez a las autoridades, ya sea de manera periódica o cuando sean detectadas.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo5">
-                            <h3>5. Estructuras Internas</h3>
-                            <p>
-                                Son las figuras cuya participación influyen en el correcto cumplimiento de las obligaciones para la Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo6">
-                            <h3>6. Capacitación y Difusión</h3>
-                            <p>
-                                Se refiere a la obligación que tenemos de capacitarnos en esta materia al inicio de la relación laboral con la Compañía y durante nuestro contrato, así como conocer cualquier actualización.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo7">
-                            <h3>7. Sistemas automatizados</h3>
-                            <h4>
-                                Las instituciones están obligadas a contar con un sistema automatizado, el cual debe:
-                            </h4>
-                            <ul>
-                                <li>
-                                    Tener un estricto control en las operaciones 
-                                    e información de los Clientes y Cedentes.
-                                </li>
-                                <li>
-                                    Ser un instrumento útil para la detección y clasificación de las Operaciones relevantes, inusuales e internas preocupantes.
-                                </li>
-                                <li>
-                                    Servir como enlace  para los reportes ante la CNSF.
-                                </li>
-                                <li>
-                                    Simplificar procesos internos para gestionar el cumplimiento a las Disposiciones.
-                                </li>
-                                <li>
-                                    Identificar a las personas en la Lista de Personas Bloqueadas.
-                                </li>
-                                <li>
-                                    Ejecutar la Metodología de Evaluación de Riesgos.
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="circulos-info" id="circulo8">
-                            <h3>8. Reserva y Confidencialidad</h3>
-                            <p>
-                                Mantener confidencialidad respecto de la información de cualquiera de los requerimientos de información y documentación, así como de órdenes de aseguramiento que formulen las autoridades para prevención,investigación, persecución y sanción en materia de Lavado de Dinero y Financiamiento al Terrorismo.
-                            </p>
-                        </div>
-                        <div class="circulos-info" id="circulo9">
-                            <h3>9. Lista de Personas Bloquedas</a></h3>
-                            <p>
-                                Son emitidas por organismos y autoridades nacionales e internacionales; incluyen personas físicas y morales que participan o se relacionan con el lavado de dinero y el financiamiento al terrorismo.
-                            </p>
-                        </div>
+                    <div class="circulos-info" id="circulo1">
+                        <h3>1. Identificación del Cliente</h3>
+                        <p>
+                            Es prevenir la relación con clientes que obtengan sus recursos de actividades ilícitas; al
+                            verificar su identidad, se pueden mitigar los riesgos operacionales, legales o
+                            reputacionales a los que pudiera estar expuesta la Sociedad. También ayuda a prevenir
+                            usurpaciones de identidad.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo2">
+                        <h3>2. Conocimiento del Cliente</h3>
+                        <p>
+                            Se refiere a
+                            crear un perfil transaccional por cada uno de sus clientes y estará basado en la información
+                            que proporcionó al momento de la identificación, en su caso, aquella con que cuente la
+                            entidad, respecto del monto, número, tipo, naturaleza y frecuencia de las operaciones
+                            que comúnmente realizan dichos clientes; el origen y destino de los recursos involucrados.
+
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo3">
+                        <h3>3. Metodología de Evaluación de Riesgos PLD/CFT</h3>
+                        <p>
+                            Esta Metodología nos permite entender cómo y hasta qué punto es vulnerable la Compañía a los
+                            riesgos en materia de LD/FT, lo que nos permite asignar adecuadamente nuestros recursos y
+                            aplicar procesos de gestión de riesgos efectivos a las características de esos riesgos.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo4">
+                        <h3>4. Reporte de Operaciones</h3>
+                        <p>
+                            Se refiere a detectar, identificar y reportar cualquier operación sospechosa al Oficial de
+                            Cumplimiento.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo5">
+                        <h3>5. Estructuras Internas</h3>
+                        <p>
+                            Son las figuras cuya participación influyen en el correcto cumplimiento de las obligaciones
+                            para la Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo6">
+                        <h3>6. Capacitación y Difusión</h3>
+                        <p>
+                            Se refiere a la obligación que tenemos de capacitarnos en esta materia al inicio de la
+                            relación laboral con la Compañía y durante nuestro contrato por una vez al año, así como
+                            conocer cualquier
+                            actualización.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo7">
+                        <h3>7. Sistemas automatizados</h3>
+                        <p>
+                            Las instituciones están obligadas a contar con un sistema automatizado, el cual debe tener
+                            un estricto control en las operaciones e información de los Clientes y Cedentes, así como sr
+                            un instrumento útil para la detección y clasificación de las Operaciones relevantes,
+                            inusuales e internas preocupantes.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo8">
+                        <h3>8. Reserva y Confidencialidad</h3>
+                        <p>
+                            Mantener confidencialidad respecto de la información de cualquiera de los requerimientos de
+                            información y documentación, así como de órdenes de aseguramiento que formulen las
+                            autoridades para prevención,investigación, persecución y sanción en materia de Lavado de
+                            Dinero y Financiamiento al Terrorismo.
+                        </p>
+                    </div>
+                    <div class="circulos-info" id="circulo9">
+                        <h3>9. Lista de Personas Bloquedas</a></h3>
+                        <p>
+                            Son emitidas por organismos y autoridades nacionales e internacionales; incluyen personas
+                            físicas y morales que participan o se relacionan con el lavado de dinero y el financiamiento
+                            al terrorismo y con las cuales no se debe iniciar o mantener relación comercial.
+                        </p>
+                    </div>
                     <!-- </div> -->
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
