--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -14,8 +14,11 @@
             <img src="./build/img/contenido/Pag05/Persona.svg" alt="Persona">
         </div>
         <div id="mensaje-intro5">
+            <h3>Política de Identificación del Cliente</h3>
             <p>
-                Es la acción de integrar y conservar un expediente a través del agente o colaborador responsable de cada uno de sus clientes, previamente a que celebren un contrato para realizar Operaciones de Seguro o Reaseguro que las Compañías estén autorizadas.
+                Es la acción de integrar y conservar un expediente a través del agente o colaborador responsable de cada
+                uno de sus clientes, previamente a que celebren un contrato para realizar Operaciones de Seguro o
+                Reaseguro que las Compañías estén autorizadas.
             </p>
         </div>
     </div>
@@ -115,7 +118,9 @@
 
         <div id="mensaje05_2">
             <p>
-                De acuerdo a la empresa y las funciones que realizas en tu puesto selecciona la opción que necesites, en el caso de la División de Soporte Empresarial y Transformación y la División de Gestión de Activos y Estrategia Financiera aplican ambos casos.
+                De acuerdo a la empresa y las funciones que realizas en tu puesto selecciona la opción que necesites, en
+                el caso de la División de Soporte Empresarial y Transformación y la División de Gestión de Activos y
+                Estrategia Financiera aplican ambos casos.
 
             </p>
         </div>
@@ -146,8 +151,11 @@
         <div class="tablas05 tabla-activa" id="info-seguros">
             <div class="info-seguros" id="seguro01">
                 <p>En caso de Emisión:</p>
-                <p>Recabar del Cliente datos y documentos previamente a la Celebración del contrato: del Beneficiario en caso de que sea designado, sólo se le pedirán tres datos: nombre, fecha de nacimiento y domicilio</p>
-                <p>La identificación del Cliente puede hacerse bajo los umbrales previstos en el régimen simplificado.</p>
+                <p>Recabar del Cliente datos y documentos previamente a la Celebración del contrato: del Beneficiario en
+                    caso de que sea designado, sólo se le pedirán tres datos: nombre, fecha de nacimiento y domicilio.
+                </p>
+                <p>La identificación del Cliente puede hacerse bajo los umbrales previstos en el régimen simplificado.
+                </p>
             </div>
             <div class="info-seguros" id="seguro02">
                 <p>La batería de datos y documentos utilizados debe estar disponible para consulta.</p>
@@ -155,41 +163,48 @@
             <div class="info-seguros" id="seguro03">
                 <p>En caso de Siniestros:
                 </p>
-                <p>Antes de que se entreguen recursos por cualquier concepto, o a más tardar cuando se presenten a ejercer sus derechos:</p>
+                <p>Antes de que se entreguen recursos por cualquier concepto, o a más tardar cuando se presenten a
+                    ejercer sus derechos:</p>
                 <ul>
                     <li>Entrega de recursos: cheque o transferencia.</li>
                     <li>Sin importar el monto (desde un peso).</li>
-                    <li>Cualquier concepto (cuando aplique el siniestro): devolución de prima, cancelación anticipada, prima no devengada, rescisión, agravación de siniestro, supervivencia, fallecimiento, cancelación de compra de salvamentos, retiro total de productos con componentes de inversión.</li>
+                    <li>Cualquier concepto (cuando aplique el siniestro): devolución de prima, cancelación anticipada,
+                        prima no devengada, rescisión, agravación de siniestro, supervivencia, fallecimiento,
+                        cancelación de compra de salvamentos, retiro total de productos con componentes de inversión.
+                    </li>
                 </ul>
             </div>
             <div class="info-seguros" id="seguro04">
                 <p>Umbrales de Identificación:</p>
                 <ul>
                     <li>Prima anual menor a 2,500 dólares.</li>
-                    <li>Prima anual entre 2,500 dólares y menor a 7,500 dólares </li>
-                    <li>Prima superior a 7,500 dólares</li>
-                    <li>Para las Dependencias y Entidades Públicas Federales Estatales, Municipalesy Empresas del Sector Financiero, se aplican las Medidas Simplificadas de Identificación</li>
+                    <li>Prima anual entre 2,500 dólares y menor a 7,500 dólares. </li>
+                    <li>Prima superior a 7,500 dólares.</li>
+                    <li>Para las Dependencias y Entidades Públicas Federales Estatales, Municipalesy Empresas del Sector
+                        Financiero, se aplican las Medidas Simplificadas de Identificación.</li>
                 </ul>
-                <p>Cambias de Umbrales:</p>
+                <p>Cambios de Umbrales:</p>
                 <ul>
                     <li>
-                        En el momento en que se detecte que el Cliente con la misma operación o por varias rebase el umbra  inicial de identificación, deberá integrar su expediente conforme al nuevo umbral de operación en que se encuentre. 
+                        En el momento en que se detecte que el Cliente con la misma operación o por varias rebase el
+                        umbra inicial de identificación, deberá integrar su expediente conforme al nuevo umbral de
+                        operación en que se encuentre.
                     </li>
                 </ul>
             </div>
         </div>
         <div class="tablas05" id="info-reaseguradora">
             <div id="reaseguradora01">
-                <p>Al inicio de la relación comercial:</p>
+                <b>Al inicio de la relación comercial:</b>
                 <ul id="punto1">
                     <li>Recabar de la Cedente datos y documentos previamente a la Celebración del contrato.</li>
+                    <li>Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</li>
                 </ul>
-                <p>Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas. </p>
+                <b>En caso de la Reaseguradora </b>
                 <ul id="punto2">
-                    <li>En caso de la Reaseguradora</li>
                     <li>Solo puede hacerse al inicio de la relación comercial.</li>
                 </ul>
-                <p>Conforme a las Medidas Simplificadas – Identificación de Cedentes</p>
+                <b>Conforme a las Medidas Simplificadas – Identificación de Cedentes</b>
                 <ul id="punto3">
                     <li>Instituciones de Nacionalidad Mexicana</li>
                     <li>Instituciones de Nacionalidad Extranjera</li>
