--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -27,24 +27,27 @@
                 <div id="libro1">
                     <a class="btn-pag06" href="#cuadro1">
                         <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro1.svg" alt="libro1">
+                            <img src="./build/img/contenido/Pag06/libro-azul.svg" alt="libro1">
                         </figure>
                     </a>
+                    <h4>Documentación</h4>
                     <div class="cuadro-pag06" id="cuadro1">
-                        <p>
-                            Por parte de un auditor independiente o una certificación de la institución extranjera, en
-                            el que explique que la institución da cumplimiento a obligaciones similares a las
-                            establecidas en México, respecto de la identificación y conocimiento
-                            de la Cedente.
-                        </p>
+                        <li>Formato KYC.</li>
+                        <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
+                            Cedente.</li>
+                        <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
+                            legal de la Cedente.</li>
+                        <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
+                            Cedente cuenta con medidas en materia de PLD/CFT.</li>
                     </div>
                 </div>
                 <div id="libro2">
                     <a class="btn-pag06" href="#cuadro2">
                         <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro2.svg" alt="libro2">
+                            <img src="./build/img/contenido/Pag06/libro-naranja.svg" alt="libro2">
                         </figure>
                     </a>
+                    <h4>Información</h4>
                     <div class="cuadro-pag06" id="cuadro2">
                         <li>Conocer el negocio al que se dedican las contrapartes.</li>
                         <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
@@ -60,10 +63,11 @@
                 <div id="libro3">
                     <a class="btn-pag06" href="#cuadro3">
                         <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro3.svg" alt="libro3">
+                            <img src="./build/img/contenido/Pag06/libro-verde.svg" alt="libro3">
                         </figure>
                     </a>
-                    <div class ="cuadro-pag06" id="cuadro3">
+                    <h4>En caso de reaseguradora</h4>
+                    <div class="cuadro-pag06" id="cuadro3">
                         <p>
                             De acuerdo con la información
                             de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
@@ -75,6 +79,76 @@
                             en la operación.
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Vista Telefono -->
+    <div id="cont-pag06Tel">
+        <div id="cont-img">
+            <figure class="img-personaje">
+                <img src="./build/img/contenido/Pag06/personajeTel.svg" alt="Personaje">
+            </figure>
+            <div id="clic-pag06Tel">
+                <!-- <figure class="mano-pag06">
+                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
+                </figure> -->
+                <p>Clic en cada botón para conocer más detalles.</p>
+            </div>
+        </div>
+        <div id="libros">
+            <div id="libro1">
+                <a class="btn-pag06Tel" href="#cuadro1-tel">
+                    <figure class="libro1-img">
+                        <img src="./build/img/contenido/Pag06/libro-azulTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro1-tel">
+                    <li>Formato KYC.</li>
+                    <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
+                        Cedente.</li>
+                    <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
+                        legal de la Cedente.</li>
+                    <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
+                        Cedente cuenta con medidas en materia de PLD/CFT.</li>
+                </div>
+            </div>
+            <div id="libro2">
+                <a class="btn-pag06Tel" href="#cuadro2-tel">
+                    <figure class="libro2-img">
+                        <img src="./build/img/contenido/Pag06/libro-naranjaTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro2-tel">
+                    <li>Conocer el negocio al que se dedican las contrapartes.</li>
+                    <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
+                        de PLD/CFT.
+                    </li>
+                    <li>Conocer si dichas instituciones
+                        son supervisadas por alguna autoridad competente.
+                    </li>
+                    <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
+                    </li>
+                </div>
+            </div>
+            <div id="libro3">
+                <a class="btn-pag06Tel" href="#cuadro3-tel">
+                    <figure class="libro3-img">
+                        <img src="./build/img/contenido/Pag06/libro-verdeTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro3-tel">
+                    <p>
+                        De acuerdo con la información
+                        de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
+                        abstenerse de realizar operaciones de reaseguro o reafianzamiento
+                        con aquellos que no tengan presencia física en la jurisdicción.
+                        Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
+                        solicitar al cliente información para identificar al Propietario
+                        Real de los recursos involucrados
+                        en la operación.
+                    </p>
                 </div>
             </div>
         </div>
