--- a/contenido/pag08.html
+++ b/contenido/pag08.html
@@ -31,7 +31,7 @@
             <div id="cont-alerta">
                 <div id="alerta">
                     <h4 id="titulo-mensaje">
-                        Integración de expediente de la Cedente y medidas simplificadas de identificación
+                        Medidas simplificadas de identificación
                     </h4>
                     <div id="contenido">
                         <div class="cont-imagen">
