--- a/contenido/pag13.html
+++ b/contenido/pag13.html
@@ -14,7 +14,7 @@
         <div id="cont-obligaciones">
             <p>Otra de las obligaciones establecidas en las DCG, es contar con Estructuras Internas para cumplir y hacer cumplir las obligaciones en materia de PLD y CFT, específicamente se refiere a las dos siguientes:</p>
             <p><span>1. Comité de Comunicación y Control (CCC):</span> Es un órgano que, en conjunto, toma decisiones y lleva a cabo acciones en relación a los temas de Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.</p>
-            <p><span>2. Oficial de Cumplimiento:</span> Es el funcionario encargado de vigilar el cumplimiento, implementación y adecuado funcionamiento de la normatividad en materia de PLD/CFT;  es el enlace entre con la autoridad supervisora (CNSF) y la Compañía.</p>
+            <p><span>2. Oficial de Cumplimiento:</span> Es el funcionario encargado de vigilar el cumplimiento, implementación y adecuado funcionamiento de la normatividad en materia de PLD/CFT;  es el enlace entre con la autoridad supervisora (CNSF) entre la SCHP, CNSF y CCC.</p>
         </div>
     </div>
 
@@ -97,12 +97,12 @@
                     <p class="parrafos" id="principal">Es el funcionario designado por el Consejo de Administración de la Compañía, él:</p>
                     <p class="parrafos" id="fn-1">Elabora y propone al Comité el Manual de Cumplimiento PLD/CFT y Metodología de Evaluación de Riesgos.</p>
                     <p class="parrafos" id="fn-2">Verifica la correcta ejecución de medidas adoptadas.</p>
-                    <p class="parrafos" id="fn-3">Da a conocer la celebración de contratos  de alto riesgos.</p>
+                    <p class="parrafos" id="fn-3">Da a conocer la celebración de contratos  de alto riesgo.</p>
                     <p class="parrafos" id="fn-4">Investiga para someter a dictaminación del CCC operaciones inusuales o internas preocupantes y envía el reporte a CNSF.</p>
                     <p class="parrafos" id="fn-5">Define programas de capacitación.</p>
                     <p class="parrafos" id="fn-6">Recibe y verifica la respuesta de requerimientos de información y documentación.</p>
                     <p class="parrafos" id="fn-7">Es el enlace entre el Comité, la SHCP y la CNSF.</p>
-                    <p class="parrafos" id="fn-8">Informar respecto de conductas, actividades o comportamientos realizados por colaboradores que incurran en infracciones y que se impongan medidas disciplinarias correspondientes.</p>
+                    <p class="parrafos" id="fn-8">Informa respecto de conductas, actividades o comportamientos realizados por colaboradores que incurran en infracciones y que se impongan medidas disciplinarias correspondientes.</p>
                 </div>
             </div>
             <div id="cont-capacitacion">
@@ -119,7 +119,7 @@
 
                 <div id="cont-figuras">
                     <div id="flecha">
-                        <p>Ser capacitados al menos una vez al año en tema de Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.</p>
+                        <p>Ser capacitados al menos una vez al año en el tema de Prevención del Lavado de Dinero y Combate al Financiamiento al Terrorismo.</p>
                     </div>
                     <div id="cuadro">
                         <p>Realizar y aprobar la evaluación correspondiente, al menos con 80 puntos.</p>
