--- a/contenido/pag14.html
+++ b/contenido/pag14.html
@@ -12,7 +12,7 @@
             <div class="cont-globo">
                 <div class="globo">
                     <p>
-                        La Compañía está obligadas a contar con un sistema automatizado, el cual debe: 
+                        Las Aseguradoras y la Reaseguradora están obligadas a contar con un sistema automatizado, el cual debe: 
                     </p>
                     <ul>
                         <li>Tener un estricto control en las operaciones e información de los Clientes.</li>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="cuadros-info" id="info2">
                         <p>
-                            Generar, y transmitir de forma segura a la SHCP, la información relativa a los reportes de operaciones relevantes, inusuales e internas preocupantes.
+                            Generar y transmitir de forma segura a la SHCP, la información relativa a los reportes de operaciones relevantes, inusuales e internas preocupantes.
                         </p>
                     </div>
                     <div class="cuadros-info" id="info3">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="cuadros-info" id="info5">
                         <p>
-                            Agrupar en una base consolidada, las operaciones y contratos de un mismo cliente, a efecto de controlar y dar seguimiento de a sus operaciones.
+                            Agrupar en una base consolidada, las operaciones y contratos de un mismo cliente, a efecto de controlar y dar seguimiento de sus operaciones.
                         </p>
                     </div>
                     <div class="cuadros-info" id="info6">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="cuadros-info" id="info7">
                         <p>
-                            Servir de medio para que las Compañía reporte a las áreas internas de forma segura, confidencial y auditable las posibles operaciones inusuales e internas preocupantes. 
+                            Servir de medio para que la Compañía reporte a las áreas internas de forma segura, confidencial y auditable las posibles operaciones inusuales e internas preocupantes. 
                         </p>
                     </div>
                     <div class="cuadros-info" id="info8">
@@ -140,7 +140,7 @@
                     </div>
                     <div class="cuadros-info" id="info10">
                         <p>
-                            Ejecutar un sistema de alertas que detecte operaciones que involucren países o jurisdicciones con regímenes fiscales preferentes o que no cuenten con medidas del PLD/CFT, PEP's y Lista de Personas Bloqueadas.
+                            Ejecutar un sistema de alertas que detecte operaciones que involucren países o jurisdicciones con regímenes fiscales preferentes o que no cuenten con medidas de PLD/CFT, PEP's y Lista de Personas Bloqueadas.
                         </p>
                     </div>
                 </div>
