--- a/contenido/pag15.html
+++ b/contenido/pag15.html
@@ -35,7 +35,7 @@
                 </figure>
             </a>
             <div class ="globos12" id="globo2">
-                2. Debes comprometerte a no comentar o proporcionar por cualquier medio, datos
+                2. Recuerda no comentar o proporcionar por cualquier medio, datos
                 y documentos que integran los expedientes de identificación de los Clientes, así como los registros de
                 operaciones.
             </div>
