--- a/contenido/pag16.html
+++ b/contenido/pag16.html
@@ -18,7 +18,7 @@
                 <div id="globo1">
                     <p>
                         No olvides que las LISTAS DE PERSONAS BLOQUEADAS son emitidas por organismos y autoridades
-                        nacionales e internacionales e incluyen personas físicas y morales que participan o se
+                        nacionales e internacionales que incluyen personas físicas y morales que participan o se
                         relacionan con el Lavado de Dinero y Financiamiento al Terrorismo.
                     </p>
                 </div>
@@ -48,11 +48,14 @@
                 <p>Da clic en cada botón para conocerlas:</p>
             </div>
             <div id="botones">
-                <div id="btn-aseguradora">
-                    <a class="btn-pag16" href="#aseguradora">Aseguradora</a>
-                </div>
-                <div id="btn-reaseguradora">
-                    <a class="btn-pag16" href="#reaseguradora">Reaseguradora Patria</a>
+                <h3>Supuestos no Aplicables</h3>
+                <div class="flex">
+                    <div id="btn-aseguradora">
+                        <a class="btn-pag16" href="#aseguradora">Aseguradora</a>
+                    </div>
+                    <div id="btn-reaseguradora">
+                        <a class="btn-pag16" href="#reaseguradora">Reaseguradora Patria</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -82,7 +85,7 @@
                 No actúa como Reaseguradora o Reafianzadora de instituciones extranjeras.
             </p><br>
             <p>
-                No celebra operaciones de Fideicomisos.
+                No celebra contratos de venta de seguros a través de banca electrónica; ni operaciones de Fidecomisos.
             </p><br>
             <p>
                 La Compañía no realiza operaciones en efectivo moneda nacional y/o extranjera en cajas por cualquier
