--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -40,8 +40,7 @@
                     con un <b>Buzón de Denuncia</b> para operaciones internas preocupantes
                     o inusuales que te permite enviar directamente, al área a cargo del Oficial de Cumplimiento, avisos
                     sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o
-                    Agentes, identificadas como Operaciones Inusuales u Operaciones Internas Preocupantes, presentadas
-                    de forma aislada o reiterada.
+                    Agentes, identificadas como Operaciones Inusuales u Operaciones Internas Preocupantes.
                 </span>
                 <figure class="img-personaje2">
                     <img src="./build/img/contenido/Pag17/persona2.svg" alt="Personaje 2">
@@ -56,7 +55,7 @@
         </figure>
         <div id="text-personaje3">
             En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para
-            operaciones internas preocupantes o inusuales para que todos colaboradores envíen de manera directa al
+            operaciones internas preocupantes o inusuales para que todos los colaboradores envíen de manera directa al
             Oficial de Cumplimiento avisos sobre operaciones o conductas detectadas.
         </div>
     </div>
@@ -76,9 +75,9 @@
                 <div class="carousel-item active">
                     <div class="slide">
                         <div class="txt-slide">
-                            El cliente se niega a proporcionar datos o documentos de identificación
-                            del Cliente presenta información que pudiera ser apócrifa o falsa necesarios
-                            para la contratación.
+                            El cliente se niega a proporcionar datos o documentos de identificación del Cliente, que son
+                            necesarios para la contratación, sin embargo, en cliente presenta información que pudiera
+                            ser apócrifa o falsa.
                         </div>
                         <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide1.svg" alt="slide 1">
@@ -100,7 +99,7 @@
                 <div class="carousel-item">
                     <div class="slide">
                         <div class="txt-slide">
-                            La apariencia del cliente o su domicilio no concuerdan con la información.
+                            Conoces o tienes sospechas de que el Cliente está involucrado en actos ilícitos. 
                         </div>
                         <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide3.svg" alt="slide 3">
@@ -110,7 +109,7 @@
                 <div class="carousel-item">
                     <div class="slide">
                         <div class="txt-slide">
-                            La apariencia del cliente o su domicilio no concuerdan con la información.
+                            Se detectan flujos de efectivo inusualmente elevados y no habituales para el cliente. 
                         </div>
                         <figure class="img-slide">
                             <img src="./build/img/contenido/Pag17/slide4.svg" alt="slide 4">
