--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -73,7 +73,7 @@
             <div class="back caras">
                 <div class="cont-mensaje-back" id="libro-verde">
                     <p>
-                        Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitana
+                        Establecer criterios uniformes conforme a los procesos operativos y estrategias, que permitan a
                         los colaboradores de la Compañía establecer sistemas preventivos de identificación y de
                         conocimiento del Cliente; a fin de mitigar el riesgo de realizar operaciones que pudieran verse
                         implicadas en los supuestos antes referidos.
@@ -92,7 +92,7 @@
                     <p>
                         Ser una herramienta de trabajo mediante la cual los Colaboradores de la Compañía podrán detectar
                         y reportar posibles Operaciones con recursos de procedencia ilícita y/o combate al
-                        financiamiento del terrorismo; así como realizar el reporte de cualquier operación a la
+                        financiamiento al terrorismo; así como realizar el reporte de cualquier operación a la
                         autoridad.
                     </p>
                 </div>
@@ -175,7 +175,7 @@
             <div class="cont-titulo" id="titulo">FINANCIAMIENTO AL TERRORISMO</div>
             <div class="cont-info">
                 <div class="info" id="f-cuadro1">
-                    Generar temor/terror
+                    Generar temor o terror
                 </div>
             </div>
             <div class="cont-info">
