--- a/contenido/pag23.html
+++ b/contenido/pag23.html
@@ -34,9 +34,9 @@
                     <ul>
                         <li>Compuesto por los sujetos obligados (S0).</li>
                         <li>Identifican y conocen a los clientes.</li>
-                        <li>Monitorean operaciones</li>
+                        <li>Monitorean operaciones.</li>
                         <li>Detectan operaciones de riesgo.</li>
-                        <li>Envían reportes</li>
+                        <li>Envían reportes.</li>
                     </ul>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="cont-info" id="cont-ficha5">
                     <ul>
                         <li>Recibe reportes</li>
-                        <li>información recibida para detectar posibles conductas</li>
+                        <li>Analiza la información recibida para detectar posibles conductas.</li>
                     </ul>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 </a>
                 <div class="info" id="gafi">
                     <p>
-                        La Financial Action Task Force o Grupo de Acción Financiera Internacional, promueve la implementación efectiva de medidas, regulaciones y operaciones para combatir el Lavado de Dinero y el Financiamiento al Terrorismo a través de sus “40 Recomendaciones”. 
+                        El Financial Action Task Force o Grupo de Acción Financiera Internacional, promueve la implementación efectiva de medidas, regulaciones y operaciones para combatir el Lavado de Dinero y el Financiamiento al Terrorismo a través de sus “40 Recomendaciones”. 
                     </p>
                 </div>
             </div>
