--- a/contenido/pag24.html
+++ b/contenido/pag24.html
@@ -25,7 +25,7 @@
                     <img src="./build/img/contenido/Pag24/Mano.svg" alt="mano">
                 </figure>
                 <div class="parrafos">
-                    <p>A continuación encontrarás algunos delitos previos al delito de Lavado de Dinero.
+                    <p>A continuación encontrarás algunos delitos previos o subyacentes al delito de Lavado de Dinero.
                     </p>
                     <p>Da clic en cada tarjeta para conocer más.</p>
                 </div>
