--- a/contenido/pag25.html
+++ b/contenido/pag25.html
@@ -54,7 +54,7 @@
         <div id="cont-drop">
             <div class="posts">
                 <div class="cuadro" id="cuadro1">
-                    <p>Son los actos/operaciones que consisten en hacer que los fondos obtenidos a través de las comisiones de delitos, aparezcan como el fruto de actividades legales  y circulen sin problema en el sistema financiero.</p>
+                    <p>Son los actos u operaciones que consisten en hacer que los fondos obtenidos a través de las comisiones de delitos, aparezcan como el fruto de actividades legales  y circulen sin problema en el sistema financiero.</p>
                 </div>
 
                 <div class="drop" id="drop8" data-id="8">
@@ -163,7 +163,7 @@
             </div>
             <div class="posts">
                 <div class="cuadro" id="cuadro4">
-                    <p>Autoridad que Supervisa que los sujetos obligados cumplan con sus obligaciones por medio de acciones de vigilancia e inspección.</p>
+                    <p>Autoridad que supervisa que los sujetos obligados cumplan con sus obligaciones por medio de acciones de vigilancia e inspección.</p>
                 </div>
 
                 <div class="drop" id="drop1" data-id="1">
@@ -235,7 +235,7 @@
             </div>
             <div class="posts">
                 <div class="cuadro" id="cuadro6">
-                    <p>Es la autoridad que Crea el marco jurídico relativo a la PLD/CFT por medio de la formulación de políticas de promoción, regulación y supervisión, así como la interpretación del Marco Normativo.</p>
+                    <p>Es la autoridad que crea el marco jurídico relativo a la PLD/CFT por medio de la formulación de políticas de promoción, regulación y supervisión, así como la interpretación del Marco Normativo.</p>
                 </div>
 
                 <div class="drop" id="drop3" data-id="3">
@@ -271,7 +271,7 @@
             </div>
             <div class="posts">
                 <div class="cuadro" id="cuadro7">
-                    <p>Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los gobiernos generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad física, libertad, etc., valiéndose de instrumentos capaces de causar estragos.</p>
+                    <p>Proceso para obtener los bienes o recursos de procedencia lícita o ilícita, para presionar a los gobiernos generando terror o temor en la población a través de actos que ponen en peligro la vida, la integridad física, libertad, etc., valiéndose de instrumentos capaces de causar estragos.</p>
                 </div>
 
                 <div class="drop" id="drop4" data-id="4">
