--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -84,7 +84,7 @@
                   <div class="carousel-item">
                       <div class="w-100">
                         <div class="informacion">
-                            <p>Ha recibido un correo por el que el Agente de Seguros xxx le solicita que lo ayude para que el pago se realice en efectivo y aprovechando la comunicación, le permita entregar los documentos de identificación con posterioridad.</p>
+                            <p>Ha recibido un correo por el que el Agente de Seguros Juan Menchaca le solicita que lo ayude para que el pago se realice en efectivo y aprovechando la comunicación, le permita entregar los documentos de identificación con posterioridad.</p>
                         </div>
                         <figure class="cont-imagen">
                             <img src="./build/img/contenido/Pag26/icon2.svg" alt="icono">
